# AndFix

./: .gitignore  build.gradle  local.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
hotfix/: build.gradle
hotfix/src/androidTest/java/com/nj/baijiayun/hotfix/: ExampleInstrumentedTest.java
hotfix/src/main/: AndroidManifest.xml
hotfix/src/main/java/com/nj/baijiayun/hotfix/: AndFix.java  AndFixManager.java  Compat.java
hotfix/src/main/java/com/nj/baijiayun/hotfix/annotation/: MethodReplace.java
hotfix/src/main/java/com/nj/baijiayun/hotfix/patch/: Patch.java  PatchManager.java
hotfix/src/main/java/com/nj/baijiayun/hotfix/security/: SecurityChecker.java
hotfix/src/main/java/com/nj/baijiayun/hotfix/util/: FileUtil.java
hotfix/src/main/jni/: CMakeLists.txt
hotfix/src/main/jni/art/: art_method_replace_7_0.cpp
hotfix/src/main/jni/dalvik/: dalvik_method_replace.cpp
hotfix/src/test/java/com/nj/baijiayun/hotfix/: ExampleUnitTest.java
samples/: AndroidManifest.xml  build.gradle
samples/src/com/euler/andfix/: MainApplication.java
